@@ -41,7 +41,8 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    BSD 2-Clause License
+     © 2005-2014 Michal Špaček
+     BSD 2-Clause License
 
 VERSION
     0.01
