@@ -68,7 +68,8 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
-BSD 2-Clause License
+ © 2005-2014 Michal Špaček
+ BSD 2-Clause License
 
 =head1 VERSION 
 
